[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Aaron Templeton <aaron.templeton@hingehealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
SQLAlchemy = "^2.0.21"
SQLite4 = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
